unpackaged/main/default/objects/MBO_Activity__c/MBO_Activity__c.object-meta.xml
<CustomObject>
    <label>MBO Activity</label>
    <nameField>
        <displayFormat>MBO ACT - {000}</displayFormat>
        <label>MBO Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBO Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>