unpackaged/main/default/objects/MBO_Activity__c/fields/Account_Related_Activity__c.field-meta.xml
<CustomField>
    <fullName>Account_Related_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Related Activity</label>
    <type>Checkbox</type>
</CustomField>