unpackaged/main/default/objects/MBO_Activity__c/fields/Add_new_surgeons__c.field-meta.xml
<CustomField>
    <fullName>Add_new_surgeons__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>New surgeons and/or indications</inlineHelpText>
    <label>2. Add New Surgeons</label>
    <type>Checkbox</type>
</CustomField>