unpackaged/main/default/objects/MBO_Activity__c/fields/Annual_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Annual_Objectives__c</fullName>
    <label>Annual Objectives</label>
    <type>TextArea</type>
</CustomField>