unpackaged/main/default/objects/MBO_Activity__c/fields/Co_travel_w_RM_AVP_other__c.field-meta.xml
<CustomField>
    <fullName>Co_travel_w_RM_AVP_other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-travel w/ RM, AVP, other</label>
    <type>Checkbox</type>
</CustomField>