unpackaged/main/default/objects/MBO_Activity__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is not required when a Hospital has been selected.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MBO Activities</relationshipLabel>
    <relationshipName>MBO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>