unpackaged/main/default/objects/MBO_Activity__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>