unpackaged/main/default/objects/MBO_Activity__c/fields/Distributor_rep_training_and_activity__c.field-meta.xml
<CustomField>
    <fullName>Distributor_rep_training_and_activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributor &amp; rep training and activity</label>
    <type>Checkbox</type>
</CustomField>