unpackaged/main/default/objects/MBO_Activity__c/fields/Expand_Usage__c.field-meta.xml
<CustomField>
    <fullName>Expand_Usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expand Usage</label>
    <type>Checkbox</type>
</CustomField>