unpackaged/main/default/objects/MBO_Activity__c/fields/Grow_top_5_revenue__c.field-meta.xml
<CustomField>
    <fullName>Grow_top_5_revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3. Top 5 Account</label>
    <type>Checkbox</type>
</CustomField>