unpackaged/main/default/objects/MBO_Activity__c/fields/Hospital_name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_name__c</fullName>
    <formula>Surgeon__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital name</label>
    <type>Text</type>
</CustomField>