unpackaged/main/default/objects/MBO_Activity__c/fields/Maximise_Rep_performance__c.field-meta.xml
<CustomField>
    <fullName>Maximise_Rep_performance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Training, case attendance, ride-along, 1st 90 days</inlineHelpText>
    <label>3. Maximize Rep Performance</label>
    <type>Checkbox</type>
</CustomField>