unpackaged/main/default/objects/MBO_Activity__c/fields/MBO_Objective_s__c.field-meta.xml
<CustomField>
    <fullName>MBO_Objective_s__c</fullName>
    <description>IF( Resident_Activity__c = TRUE, &quot;Resident activity. &quot;&amp;BR(), NULL) &amp;
IF( Co_travel_w_RM_AVP_other__c = TRUE, &quot;Co-travel with RM, AVP, other. &quot;&amp;BR(), NULL) &amp;
IF( Distributor_rep_training_and_activity__c = TRUE, &quot;Distributor &amp; rep training activity. &quot;, NULL)&amp;
IF( X1_Grow_Stimulan__c = TRUE, &quot;Grow_Stimulan. &quot;&amp;BR(), NULL) &amp;
IF( X1_Pricing_Policy_Framework__c = TRUE, &quot;Pricing Policy Framework &quot;&amp;BR(), NULL) &amp;
IF( X2_Advocacy__c = TRUE, &quot;Advocacy. &quot;&amp;BR(), NULL) &amp;
IF( X2_Grown_Spine__c = TRUE, &quot;Grown Spine. &quot;&amp;BR(), NULL) &amp;
IF( X3_Grow_Trauma_F_A__c = TRUE, &quot;Grow Trauma/ F&amp;A. &quot;&amp;BR(), NULL)</description>
    <formula>IF( Account_Related_Activity__c = TRUE, &quot;Account related activity. &quot;, NULL) &amp;
IF( Surgeon_Activity__c = TRUE, &quot;Surgeon activity. &quot;, NULL) &amp;
IF( Expand_Usage__c = TRUE, &quot;Expand usage. &quot;, NULL) &amp;
IF(  Grow_top_5_revenue__c  = TRUE, &quot;Grow Top 5 Revenue. &quot;, NULL) &amp;
IF(  Add_new_surgeons__c  = TRUE, &quot;Add New Surgeons. &quot;, NULL) &amp;
IF(  Maximise_Rep_performance__c  = TRUE, &quot;Maximize Rep Performance. &quot;, NULL) &amp;
IF( Resident_Activity__c = TRUE, &quot;Resident activity. &quot;, NULL) &amp;
IF( Co_travel_w_RM_AVP_other__c = TRUE, &quot;Co-travel with RM, AVP, other. &quot;, NULL) &amp;
IF( Distributor_rep_training_and_activity__c = TRUE, &quot;Distributor &amp; rep training activity. &quot;, NULL)&amp;
IF( X1_Grow_Stimulan__c = TRUE, &quot;Grow_Stimulan. &quot;, NULL) &amp;
IF( X1_Pricing_Policy_Framework__c = TRUE, &quot;Pricing Policy Framework &quot;, NULL) &amp;
IF( X2_Advocacy__c = TRUE, &quot;Advocacy. &quot;, NULL) &amp;
IF( X2_Grown_Spine__c = TRUE, &quot;Grown Spine. &quot;, NULL) &amp;
IF( X3_Grow_Trauma_F_A__c = TRUE, &quot;Grow Trauma/ F&amp;A. &quot;, NULL) &amp;
IF( X1_Orthopedic__c = TRUE, &quot;Orthopedic (STIMULAN) &quot;, NULL) &amp;
IF( X2_Spine__c = TRUE, &quot;Spine (STIMULAN &amp; genex) &quot;, NULL) &amp;
IF( X3_genex__c = TRUE, &quot;genex &quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBO Objective(s)</label>
    <type>Text</type>
</CustomField>