unpackaged/main/default/objects/MBO_Activity__c/fields/Number_of_boxes_ticked__c.field-meta.xml
<CustomField>
    <fullName>Number_of_boxes_ticked__c</fullName>
    <formula>0+
IF( Grow_top_5_revenue__c = true, +1, +0)+
IF(  Add_new_surgeons__c  = true, +1, +0)+
IF(  Maximise_Rep_performance__c  = true, +1, +0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of boxes ticked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>