unpackaged/main/default/objects/MBO_Activity__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <formula>IF( Grow_top_5_revenue__c = true, &quot;Grow Top 5 Revenue, &quot;, NULL) &amp;
IF(  Add_new_surgeons__c  = true, &quot;Add New Surgeons, &quot;, NULL) &amp;
IF(  Maximise_Rep_performance__c  = true, &quot;Maximize Rep Performance&quot;, NULL)</formula>
    <label>Objective</label>
    <type>Text</type>
</CustomField>