unpackaged/main/default/objects/MBO_Activity__c/fields/Product_Specialist_MBO__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialist_MBO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Specialist MBO</label>
    <referenceTo>Product_Specialist_MBO__c</referenceTo>
    <relationshipLabel>MBO Activities</relationshipLabel>
    <relationshipName>MBO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>