unpackaged/main/default/objects/MBO_Activity__c/fields/Quarterly_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_Objectives__c</fullName>
    <label>Quarterly Objectives</label>
    <type>TextArea</type>
</CustomField>