unpackaged/main/default/objects/MBO_Activity__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>IF( ISBLANK( Surgeon__c ) ,  
 Contact__r.Parent_Region__c  , 
TEXT(Surgeon__r.Sales_Region__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>