unpackaged/main/default/objects/MBO_Activity__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <inlineHelpText>Please select a date if you require an email reminder</inlineHelpText>
    <label>Reminder</label>
    <type>Date</type>
</CustomField>