unpackaged/main/default/objects/MBO_Activity__c/fields/Resident_Activity__c.field-meta.xml
<CustomField>
    <fullName>Resident_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resident Activity</label>
    <type>Checkbox</type>
</CustomField>