unpackaged/main/default/objects/MBO_Activity__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MBO_Activity_SubType</valueSetName>
    </valueSet>
</CustomField>