unpackaged/main/default/objects/MBO_Activity__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MBO Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>