unpackaged/main/default/objects/MBO_Activity__c/fields/Surgeon_Activity__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surgeon Activity</label>
    <type>Checkbox</type>
</CustomField>