unpackaged/main/default/objects/MBO_Activity__c/fields/Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for adding Surgeon to MBO Activity</description>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MBO Activities (Surgeon)</relationshipLabel>
    <relationshipName>MBO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>