unpackaged/main/default/objects/MBO_Activity__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MBO_Activity_Type</valueSetName>
    </valueSet>
</CustomField>