unpackaged/main/default/objects/MBO_Activity__c/fields/Type_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Type_Sub_Type__c</fullName>
    <formula>TEXT( Type__c)&amp;  IF(  ISPICKVAL( Sub_Type__c , &quot;&quot;)  , NULL, &quot; - &quot; &amp; TEXT( Sub_Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type / Sub-Type</label>
    <type>Text</type>
</CustomField>