unpackaged/main/default/objects/MBO_Activity__c/fields/X1_Grow_Stimulan__c.field-meta.xml
<CustomField>
    <fullName>X1_Grow_Stimulan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1. Grow Stimulan</label>
    <type>Checkbox</type>
</CustomField>