unpackaged/main/default/objects/MBO_Activity__c/fields/X1_Orthopedic__c.field-meta.xml
<CustomField>
    <fullName>X1_Orthopedic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2021 PS MBO Objective</description>
    <label>1. Orthopedic (STIMULAN)</label>
    <type>Checkbox</type>
</CustomField>