unpackaged/main/default/objects/MBO_Activity__c/fields/X1_Pricing_Policy_Framework__c.field-meta.xml
<CustomField>
    <fullName>X1_Pricing_Policy_Framework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1. Pricing Policy Framework</label>
    <type>Checkbox</type>
</CustomField>