unpackaged/main/default/objects/MBO_Activity__c/fields/X2_Advocacy__c.field-meta.xml
<CustomField>
    <fullName>X2_Advocacy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2. Advocacy</label>
    <type>Checkbox</type>
</CustomField>