unpackaged/main/default/objects/MBO_Activity__c/fields/X2_Grown_Spine__c.field-meta.xml
<CustomField>
    <fullName>X2_Grown_Spine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2. Grow Spine</label>
    <type>Checkbox</type>
</CustomField>