unpackaged/main/default/objects/MBO_Activity__c/fields/X2_Spine__c.field-meta.xml
<CustomField>
    <fullName>X2_Spine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2021 PS MBO Objective</description>
    <label>2. Spine (STIMULAN &amp; genex)</label>
    <type>Checkbox</type>
</CustomField>