unpackaged/main/default/objects/MBO_Activity__c/fields/X3_genex__c.field-meta.xml
<CustomField>
    <fullName>X3_genex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3. genex</label>
    <type>Checkbox</type>
</CustomField>