unpackaged/main/default/objects/MBO_Activity__c/fields/X3_Grow_Trauma_F_A__c.field-meta.xml
<CustomField>
    <fullName>X3_Grow_Trauma_F_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3. Grow Trauma/ F&amp;A</label>
    <type>Checkbox</type>
</CustomField>