unpackaged/main/default/objects/MBO_Activity__c/fields/X3_Trauma__c.field-meta.xml
<CustomField>
    <fullName>X3_Trauma__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2021 PS MBO Objective</description>
    <label>3. Trauma</label>
    <type>Checkbox</type>
</CustomField>