unpackaged/main/default/objects/MBO_Activity__c/recordTypes/UK_MBO.recordType-meta.xml
<RecordType>
    <fullName>UK_MBO</fullName>
    <active>true</active>
    <label>UK MBO</label>
</RecordType>