unpackaged/main/default/objects/MBO_Activity__c/recordTypes/USA_MBO.recordType-meta.xml
<RecordType>
    <fullName>USA_MBO</fullName>
    <active>true</active>
    <label>USA MBO</label>
</RecordType>