unpackaged/main/default/objects/MBO_Activity__c/validationRules/Account_Type_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type_Check</fullName>
    <active>false</active>
    <description>Checks if Distributor / Surgeon / Hospital field has been filled in. If it has then contact cannot be and vice versa.</description>
    <errorConditionFormula>AND(Contact__c &lt;&gt; &#39;&#39;,Surgeon__c &lt;&gt; &#39;&#39;)</errorConditionFormula>
    <errorMessage>Both &quot;Distributor / Hospital / Surgeon&quot; and &quot;Contact&quot; fields cannot have values. You must only fill in one or the other.</errorMessage>
</ValidationRule>