unpackaged/main/default/objects/MBO_Activity__c/validationRules/nio_more_than_1_tickbox_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>nio_more_than_1_tickbox_selected</fullName>
    <active>false</active>
    <description>you can not select more than 1 of the objectives</description>
    <errorConditionFormula>Number_of_boxes_ticked__c  &gt;= 2</errorConditionFormula>
    <errorMessage>You are not permitted to select more than 1 objective</errorMessage>
</ValidationRule>