unpackaged/main/default/objects/MBO_Activity__c/validationRules/You_must_select_1_objective.validationRule-meta.xml
<ValidationRule>
    <fullName>You_must_select_1_objective</fullName>
    <active>false</active>
    <description>You must select 1 objective</description>
    <errorConditionFormula>Number_of_boxes_ticked__c=0</errorConditionFormula>
    <errorMessage>You must select 1 objective</errorMessage>
</ValidationRule>