unpackaged/main/default/objects/MBO_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Surgeon__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>X1_Orthopedic__c</columns>
    <columns>X2_Spine__c</columns>
    <columns>X3_genex__c</columns>
    <columns>Details__c</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Contact__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>