unpackaged/main/default/objects/MBO_Activity__c/listViews/My_MBO_s.listView-meta.xml
<ListView>
    <fullName>My_MBO_s</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Objective__c</columns>
    <columns>Region__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Surgeon__c</columns>
    <columns>Type__c</columns>
    <columns>Details__c</columns>
    <filterScope>Mine</filterScope>
    <label>My MBO&#39;s</label>
</ListView>